created invisible edge element

--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <style>
   .cushion{
     content: "";
-    width: 200px;
-    height: 200px;
-    background-image:
+    position: absolute;
+    top: 30vw;
+    left: 30vw;
+    width: 349px;
+    height: 300px;
+    border-radius: 20px;
+    transform: skew(-40deg);
+    background-image: url(download.jpg);
+    background-size: 116px;
+      
   }
+  
+  .edge{
+    content: "";
+    position: absolute;
+    top: 60vw;
+    width: 349px;
+    height: 300px;
+    background-image: url(download.jpeg);
+    background-size: 100px
+    
+  }
+  
+  
 </style>
 <div class="cushion"></div>
+<div class="edge"></div>
